# downlink_mob

./: DEVELOPMENT.md  downlink_docs.md  lynx.config.ts  package.json  tailwind.config.js  task.md
.expo/types/: router.d.ts
.github/workflows/: android-release.yml
downlink_app/: AGENTS.md  Implementation.md  app.json  eas.json  package.json  task.md  tsconfig.json
downlink_app/app/: _layout.tsx  add-modal.tsx  player.tsx
downlink_app/app/(tabs)/: _layout.tsx  add.tsx  browser.tsx  completed.tsx  completed.tsxs  downloads.tsx  index.tsx  queue.tsx  queue.tsxs  settings.tsx
downlink_app/src/services/: downloadService.ts  fileSystem.ts  (+2 more)
downlink_server/: .env.example  .gitignore  CRITICAL_PROXY_REQUIRED.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EMERGENCY_PLAYER_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  MERGE_ENDPOINT.md  MERGE_README.md  PLAYER_EXTRACTION_FIX.md  README.md  YOUTUBE_BOT_FIX_DEPLOYMENT.md  YOUTUBE_FIX_QUICK_START.md  main.py  pyproject.toml  quickstart.py  test_extraction.py  test_merge.py
downlink_server/app/: __init__.py
downlink_server/app/models/: schemas.py
downlink_server/app/routers/: formats.py  health.py  info.py  merge.py  stream.py
downlink_server/app/services/: merge_service.py  ytdlp_service.py
src/: App.css  App.tsx  router.tsx
src/components/: AddDownloadModal.tsx  DownloadItem.tsx  ProgressBar.tsx  StorageIndicator.tsx
src/hooks/: useDownload.ts  useSettings.ts  useStorage.ts
src/routes/: __root.tsx
src/services/: downloadService.ts  nativeModules.ts  settingsService.ts  storageService.ts
src/types/: index.ts
(+7 files in other folders)
