[project]
name = "downlink-server"
version = "1.0.0"
description = "Downlink API — yt-dlp metadata extraction backend for the mobile app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "yt-dlp>=2026.3.17",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
package = false
